Extend search path for first successful Delphi 4 compile

--- a/GExpert4.cfg
+++ b/GExpert4.cfg
@@ -33,4 +33,8 @@
 -K$06000000
 -E"Output"
 -N"Output\DCU"
+-U"Src;Comps;EII\D4"
+-O"Src;Comps;EII\D4"
+-I"Src;Comps;EII\D4"
+-R"Src;Comps;EII\D4"
 -LUVcl40;Vclx40;Vcldb40
